Better solution to fetch BookDetails
