# server/efscaffold/efscaffold/Author.cs
@@ -1,0 +1,15 @@
+﻿using System;
+using System.Collections.Generic;
+
+namespace efscaffold.efscaffold;
+
+public partial class Author
+{
+    public string Id { get; set; } = null!;
+
+    public string Name { get; set; } = null!;
+
+    public DateTime? Createdat { get; set; }
+
+    public virtual ICollection<Book> Books { get; set; } = new List<Book>();
+}
